12-ai/whisper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisper
  namespace: whisper
spec:
  type: ClusterIP
  selector:
    app: whisper
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
